# hardware-firmware-time2stand

./: README.md  platformio.ini
MCU/Time2Stand/: Time2Stand.ino
WIN/Time2Stand/: CMakeLists.txt  Readme.md  appsettings.cpp  appsettings.h  device.cpp  device.h  device2.h  device_errorcode.cpp  device_errorcode.h  main.cpp  observer.h  positiontracker.cpp  positiontracker.h  window.cpp  window.h
src/: main.cpp
